# adventofcode

./: .gitignore  LICENSE  README.md  run2015.py
Libexec.Advent/: Day.cs  Libexec.Advent.csproj
Libexec.Advent/Collections/: Matrix.cs
Libexec.Advent/Extensions/: IEnumerableExtensions.cs  IntExtensions.cs  ListExtensions.cs  RangeExtensions.cs  StackExtensions.cs  StringExtensions.cs
advent2015/: answers.txt  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day23.py  partial_day22.py  partial_day24.py  puzzle01.py  puzzle02.py  puzzle03.py  puzzle04.py  puzzle05.py  puzzle06.py  puzzle07.py  puzzle08.py  puzzle1.py  puzzle10.py  puzzle11.py
advent2015.f/: md5.f95  puzzle01.f95  puzzle02.f95  puzzle03.f95  puzzle04.f95
advent2016/: .gitignore  CMakeLists.txt  a.out  day01a.cpp  day01b.cpp  day02a.cpp  day02b.cpp  day03a.cpp  day03b.cpp  day04a.cpp  day04b.cpp  day05a.cpp  day05b.cpp  day06a.cpp  day06b.cpp  day07a.cpp  day07b.cpp  day08a.cpp  day08b.cpp  day09a.cpp  day09b.cpp  day10a.cpp  day10b.cpp  day11a.cpp  day12a.cpp  day12b.cpp  day14a.cpp  day14b.cpp  day15a.cpp  day15b.cpp  day16a.cpp  day16b.cpp  day18a.cpp  day18b.cpp  day19a.cpp  day19b.cpp  day20a.cpp  day20b.cpp  day21a.cpp  day21b.cpp  (+23 more)
advent2017/instructions/: day01.txt  day02.txt  day04.txt  day05.txt  day08.txt  day17.txt
advent2017/src/: Day02b.cs  Day04.cs  Day05.cs  Day06.cs  Day08.cs  Day17.cs  Day18.cs  advent2017.csproj  day01.fs  day02.fs
advent2018/: pom.xml
advent2019/: .gitignore  ANSWERS.md  README.md  advent.sln
advent2019/advent/: Day.cs  IDay.cs  Program.cs  Strings.Designer.cs  Strings.resx  advent.csproj
advent2019/advent/Helpers/: Math.cs
advent2019/advent/Inputs/: input1.txt  input10.txt  input11.txt  input12.txt  input2.txt  input4.txt  input6.txt  input7.txt  input8.txt  input9.txt
advent2019/advent/Solutions/: Day1.cs  Day12.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs  Day8.cs  Day9.cs
advent2020/: ANSWERS.md  README.md  advent.sln  advent.sln.DotSettings
advent2020/advent/: Day.cs  IDay.cs  Program.cs  advent.csproj
advent2020/advent/Collections/: Deque.cs
advent2020/advent/ConsoleCode/: Console.cs  Instruction.cs  Program.cs
advent2020/advent/Exceptions/: AnswerNotFoundException.cs  BadDataException.cs
advent2020/advent/Helpers/: Math.cs  Text.cs
advent2020/advent/Inputs/: input10.txt  input3.txt  input8.txt
advent2021/: .gitignore  ANSWERS.md  README.md  advent.sln  advent.sln.DotSettings
advent2021/advent/: Day.cs  Program.cs  advent.csproj
advent2021/advent.Tests/: TestDay01.cs  TestDay02.cs  TestDay03.cs  TestDay04.cs  TestDay05.cs  TestDay06.cs  TestDay07.cs  TestDay08.cs  TestDay09.cs  advent.Tests.csproj
advent2021/advent.Util/: advent.Util.csproj
advent2022/: .gitignore  advent2022.sln
advent2022.rs/: .gitignore
advent2022.rs/Day01/: Cargo.toml
advent2022/advent2022/: DayBase.cs  Program.cs  advent2022.csproj
advent2022/advent2022.Share/: IDay.cs  IEnumerableExtensions.cs  Int32Extensions.cs  IntExtensions.cs  ListExtensions.cs  RangeExtensions.cs  StackExtensions.cs  StringExtensions.cs
advent2022/advent2022.Test/: Day01Test.cs  Day02Test.cs  Day03Test.cs  Day04Test.cs  Day05Test.cs  Day06Test.cs  Day07Test.cs  Day08Test.cs  Day09Test.cs  advent2022.Test.csproj
advent2024/: .gitignore  advent2024.sln  advent2024.sln.DotSettings  build.gradle.kts  settings.gradle.kts
advent2024/advent2024/: Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs  Day09.cs  Day11.cs  Day13.cs  Day17.cs  advent2024.csproj
advent2024/advent2024.Test/: Test2024.cs  TestHelpers.cs  advent2024.Test.csproj
advent2025/: advent2025.sln  advent2025.sln.DotSettings
advent2025/advent2025/: Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs  Day09.cs  Day11.cs  Day13.cs  Day17.cs  advent2025.csproj
advent2025/advent2025.Test/: Test2025.cs  TestHelpers.cs  advent2025.Test.csproj
(+108 files in other folders)
